// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Runes component Matches snapshot 1`] = `
<section
  className="section"
>
  <header
    className="header"
  >
    <h1>
      Runes
    </h1>
    <p>
      Translate text to runic script
    </p>
  </header>
  <label
    htmlFor="transcribe"
  >
    Text to transcribe
  </label>
  <textarea
    id="transcribe"
    onChange={[Function]}
    value=""
  />
  <p>
    Younger Futhark
  </p>
  <small>
    Long branch
  </small>
  <p
    className="runic"
  />
  <small>
    Short twig
  </small>
  <p
    className="runic"
  />
  <p>
    Elder Futhark
  </p>
  <p
    className="runic"
  />
  <p>
    Futhorc
  </p>
  <p
    className="runic"
  />
  <p>
    Futhork
  </p>
  <p
    className="runic"
  />
  <p>
    Staveless Futhark
  </p>
  <p
    className="runic"
  />
</section>
`;

exports[`Runes component Typing text to input produces transcriptions 1`] = `
<section
  className="section"
>
  <header
    className="header"
  >
    <h1>
      Runes
    </h1>
    <p>
      Translate text to runic script
    </p>
  </header>
  <label
    htmlFor="transcribe"
  >
    Text to transcribe
  </label>
  <textarea
    id="transcribe"
    onChange={[Function]}
    value="Some text"
  />
  <p>
    Younger Futhark
  </p>
  <small>
    Long branch
  </small>
  <p
    className="runic"
  >
    ᛋᚢᛘᛁ:ᛏᛁᛋᛏ
  </p>
  <small>
    Short twig
  </small>
  <p
    className="runic"
  >
    ᛌᚢᛘᛁ:ᛐᛁᛌᛐ
  </p>
  <p>
    Elder Futhark
  </p>
  <p
    className="runic"
  >
    ᛋᛟᛗᛖ:ᛏᛖᛋᛏ
  </p>
  <p>
    Futhorc
  </p>
  <p
    className="runic"
  >
    ᛋᚩᛗᛖ:ᛏᛖᛉᛏ
  </p>
  <p>
    Futhork
  </p>
  <p
    className="runic"
  >
    ᛋᚮᛘᚽ:ᛏᚽᛋᛏ
  </p>
  <p>
    Staveless Futhark
  </p>
  <p
    className="runic"
  >
    ╵ˎ⠃ᛁ:⸍ᛁ╵⸍
  </p>
</section>
`;
